--- a/index.html
+++ b/index.html
@@ -54,10 +54,37 @@
   <center>
     <section id="home">
     <div class="mainHeader">
-      <video width=600px height=300px autoplay muted>
-        <source src="Halloween.mp4" type="video/mp4">
-        Halloween
-      </video>
+      <style>
+    
+        .glowing-text {
+          font-size: 5rem;
+          color: #e1891c; /* Orange color */
+          text-shadow: 0px 0px 15px rgba(214, 140, 58, 0.5), 
+                   0px 0px 25px rgba(214, 140, 58, 0.3), 
+                   0px 0px 40px rgba(255, 140, 0, 0.4),
+                   0rem 0rem 1.5rem rgb(192, 79, 22);
+          opacity: 0;
+          animation: fadeInGlow 3s ease-in forwards;
+        }
+    
+        @keyframes fadeInGlow {
+          0% {
+            opacity: 0;
+            transform: scale(0.9);
+          }
+          100% {
+            opacity: 1;
+            transform: scale(1);
+          }
+        }
+      </style>
+</head>
+<body style="background-color: #222; display: flex; justify-content: center; align-items: center; height: 100vh;">
+
+    <!-- Glowing Text -->
+    <h1 class="glowing-text">Halloween</h1>
+
+</body>
     </div>
     </section>
   </center>
