--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--halloween-->
 <head>
   <title>Halloween</title>
   <!--In this challenge, create a website using any coding language and IDE/platform that explains the history of 
