--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <img class="pumpkin" src=pumpkinforheader-removebg-preview.png style="margin-right: 50%;" alt="pumpkin">
     <a href="#home" style="font-size: 20px; text-decoration: none; margin-right: 6%; opacity: 100%;">Home</a>
     <a href="#costumes" style="font-size: 20px; text-decoration: none; opacity: 100%;">History of Costumes</a>
+    <a href="chatbot.html" style="font-size: 20px; text-decoration: none; opacity: 100%;">Halloween FAQ</a>
   </div>
   <div style="display: flex; width: 130%; height: auto; justify-content: space-between; gap: 300px;">
     <div>
