--- a/chatbot.html
+++ b/chatbot.html
@@ -40,7 +40,7 @@
     })();
   </script>
   <div class="chat-container">
-    <h2>Halloween AI Chatbot 🎃</h2>
+    <h2>Halloween AI Chatbot</h2>
     <div class="chat-log" id="chat-log"></div>
     <form id="chat-form" class="chat-form">
       <input type="text" id="chat-input" class="chat-input" placeholder="Ask me anything about Halloween..." autocomplete="off" required>
@@ -63,16 +63,12 @@
       const thinkingMsg = appendMessage('bot', "Thinking...", true, true);
 
       try {
-        const response = await fetch('https://openrouter.ai/api/v1/chat/completions', {
+        const response = await fetch('http://localhost:3000/api/chat', {
           method: 'POST',
           headers: {
-            'Authorization': 'Bearer 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', // replace with your API key
             'Content-Type': 'application/json'
           },
-          body: JSON.stringify({
-            model: 'deepseek/deepseek-chat-v3.1:free',
-            messages: [{ role: 'user', content: userMsg }]
-          })
+          body: JSON.stringify({ message: userMsg })
         });
         const data = await response.json();
         const botMsg = data.choices?.[0]?.message?.content || "Sorry, I couldn't get a response.";
