--- a/chatbot.html
+++ b/chatbot.html
@@ -63,7 +63,7 @@
       const thinkingMsg = appendMessage('bot', "Thinking...", true, true);
 
       try {
-        const response = await fetch('http://localhost:3000/api/chat', {
+        const response = await fetch('https://halloween-24.onrender.com/api/chat', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
